Clean up styles
Squashed commit of the following:

commit c46f6ea128d98c4f080f45e09a100eb57bb2cc32
Author: Gabe Kopley <gabe@coshx.com>
Date:   Mon Oct 8 17:38:02 2012 -0700

    Large cleanup of css

commit 88a29523e16da8c833e48ceb981d44b29215fa13
Author: Gabe Kopley <gabe@coshx.com>
Date:   Mon Oct 8 16:02:51 2012 -0700

    Use color variables more places

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -1,10 +1,16 @@
-$gray: #B2B2B2;
+$off-white: #eeeeee;
+
+$gray: #b2b2b2;
 $light-gray: #97979b;
 $medium-gray: #525357;
+$dark-gray: #333333;
 
 $blue: #1588c3;
+$bright-blue: #2ba6cb;
 $dark-blue: #004264;
-$very-pale-blue: #E3E3FF;
+
+// i think these are all for code highlighting,
+// in which case we should TODO move them out of common
 $green: #afcf45;
 $purple: #c64791;
 
