--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,7 +1,4 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-$gray: #a6a6a6;
+@import "common";
 
 body p {
   line-height: 140%;
@@ -37,7 +34,7 @@ body p {
     transition: all 0.3s ease-out; /* Firefox 16+, Opera 12.50+ */
     border: 6px solid white;
     &:hover {
-      border: 6px solid #1588C3;;
+      border: 6px solid $blue;;
     }
   }
 
@@ -111,8 +108,8 @@ body p {
 #features {
 /* @include w960;*/
   margin-top: 50px;
-  border-top: 2px solid #1588C3;
-  border-bottom: 2px solid #1588C3;
+  border-top: 2px solid $blue;
+  border-bottom: 2px solid $blue;
   padding: 30px 0px;
 
   .feature {
@@ -139,7 +136,7 @@ body p {
       margin-bottom: 15px;
     }
     span.blue {
-      color: #1588C3;
+      color: $blue;
     }
     a {
       margin-bottom: 5px;
@@ -184,24 +181,6 @@ body p {
   margin: 0px auto;
 }
 
-a.html:link {
-  COLOR: #F60A0A;
-}
-
-a.html:visited {
-  text-decoration: none;
-  COLOR: #0B0B3B;
-}
-
-a.html:hover {
-  text-decoration: none;
-  COLOR: #000000;
-}
-
-a.html:active {
-  COLOR: #000000;
-}
-
 #blueprint-wrapper {
   margin: 0px auto 10px;
   max-width: 387px;
@@ -236,7 +215,6 @@ a.html:active {
 }
 
 section#blueprint-image {
-/*@include w960;*/
 
   text-align: center;
   padding-bottom: 75px;
@@ -295,7 +273,6 @@ section#blueprint-image {
 }
 
 #features {
-/* @include w960;*/
 
   .feature {
     background: image-url("services-border.png") 100% 0px no-repeat;
@@ -321,7 +298,7 @@ section#blueprint-image {
       margin-bottom: 15px;
     }
     span.blue {
-      color: #1588C3;
+      color: $blue;
     }
     a {
       margin-bottom: 5px;
@@ -341,7 +318,6 @@ section#blueprint-image {
 }
 
 #contact-us {
-/*@include w960;*/
 
   text-align: center;
   padding: 53px 0px 0px 0px;
@@ -375,7 +351,6 @@ section#blueprint-image {
 }
 
 #featured-projects {
-/*@include w960;*/
 
   header {
     background: image-url("projects-border.png") 0px 100% repeat-x;
@@ -472,8 +447,7 @@ section#blueprint-image {
 }
 
 #our-clients {
-/*@include w960;*/
-  border-top: 2px solid #1588C3;
+  border-top: 2px solid $blue;
 
   ul {
     margin-top: 50px;
@@ -484,7 +458,7 @@ section#blueprint-image {
       height: 150px;
       border-right: 1px solid black;
       border-bottom: 1px solid black;
-      background: #1588C3;
+      background: $blue;
       line-height: 200px;
       text-align: center;
       img {
@@ -500,9 +474,9 @@ section#blueprint-image {
       }
     }
     li.tendril {
-      background: #1588c3 url(client_logos/tendril.png) center center no-repeat;
+      background: $blue url(client_logos/tendril.png) center center no-repeat;
       &:hover {
-        background: #1588c3 url(client_logos/tendril_hover.png) center center no-repeat;
+        background: $blue url(client_logos/tendril_hover.png) center center no-repeat;
       }
     }
   }
@@ -511,7 +485,7 @@ section#blueprint-image {
 .white {
   background-color: white;
   &:hover {
-    background-color: #1588C3;
+    background-color: $blue;
   }
 }
 
@@ -523,14 +497,8 @@ h1.formula {
   text-transform: uppercase;
 }
 
-section#about-us p {
-/*font: 18px 'Droid Serif', serif;
-    color: #b2b2b2;
-    margin: 30px 0px;*/
-}
-
 #about-stats {
-  background: #1588c3;
+  background: $blue;
   position: relative;
 
   a {
@@ -552,126 +520,116 @@ section#about-us p {
   z-index: -1;
 }
 
-#about-stats ul {
-  list-style: none;
-}
-
-#about-stats ul.team li:first-child {
-  background: none;
-}
-
-#about-stats ul.team li {
-  width: 320px;
-  float: left;
-  color: #004264;
-  margin-top: 27px;
-  background: image-url("menu-border.png") left 0px repeat-y;
-}
-
-#about-stats ul.team li.coffee {
-  width: 310px;
-}
-
-#about-stats ul.team li.tracks {
-  width: 333px;
-  a.html:link {
-    COLOR: #0B0B3B;
+#about-stats {
+  ul {
+    list-style: none;
   }
-  a.html:visited {
-    text-decoration: none;
-    COLOR: #0B0B3B;
+
+  ul.team {
+    li:first-child {
+      background: none;
+    }
+
+    li {
+      width: 320px;
+      float: left;
+      color: $dark-blue;
+      margin-top: 27px;
+      background: image-url("menu-border.png") left 0px repeat-y;
+      h3 {
+        font: bold 14px 'Droid Sans', sans-serif;
+        text-transform: uppercase;
+      }
+
+      h2 {
+        font: bold 48px/46px 'Droid Sans', sans-serif;
+      }
+
+      p {
+        font: 12px 'Droid Serif', serif;
+        color: $dark-blue;
+        margin: 0;
+      }
+
+      a {
+        text-decoration: none;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
+
+      img {
+        float: left;
+        margin: 0px 25px;
+      }
+    }
+
+    li.coffee {
+      width: 310px;
+    }
+
+    li.tracks {
+      width: 333px;
+    }
+
+    li.food {
+      width: 317px;
+    }
   }
-  a.html:hover {
-    text-decoration: none;
-    COLOR: #000000;
+
+
+  ul.social {
+    li {
+      float: left;
+      color: $dark-blue;
+      margin: 60px 0px 40px;
+      padding: 0px 11px;
+      background: image-url("menu-border.png") left 0px repeat-y;
+      &:first-child {
+        background: none;
+      }
+      h3 {
+        font: bold 12px 'Droid Sans', sans-serif;
+        text-transform: uppercase;
+        margin-bottom: 13px;
+      }
+
+      h2 {
+        font: bold 30px 'Droid Sans', sans-serif;
+      }
+    }
+
+    li.git {
+      position: relative;
+      left: 15px;
+      width: 185px;
+    }
+
+    li.rails {
+      width: 140px;
+    }
+
+    li.tweets {
+      width: 100px;
+    }
+
+    li.blog {
+      width: 154px;
+    }
+
+    li.lunch {
+      width: 135px;
+
+      h3 a {
+        float: right;
+      }
+    }
+
+    li.ideas {
+      width: 140px;
+    }
   }
-  a.html:active {
-    COLOR: #000000;
-  }
-}
-
-#about-stats ul.team li.food {
-  width: 317px;
-}
-
-#about-stats ul.team li h3 {
-  font: bold 14px 'Droid Sans', sans-serif;
-  text-transform: uppercase;
-}
-
-#about-stats ul.team li h2 {
-  font: bold 48px/46px 'Droid Sans', sans-serif;
-}
-
-#about-stats ul.team li p {
-  font: 12px 'Droid Serif', serif;
-  color: #004264;
-  margin: 0;
-}
-
-#about-stats ul.team li p a {
-  text-decoration: none;
-}
-
-#about-stats ul.team li p a:hover {
-  text-decoration: underline;
-}
-
-#about-stats ul.team li img {
-  float: left;
-  margin: 0px 25px;
-}
-
-#about-stats ul.social li {
-  float: left;
-  color: #004264;
-  margin: 60px 0px 40px;
-  padding: 0px 11px;
-  background: image-url("menu-border.png") left 0px repeat-y;
-}
-
-#about-stats ul.social li.git {
-  position: relative;
-  left: 15px;
-  width: 185px;
-}
-
-#about-stats ul.social li.rails {
-  width: 140px;
-}
-
-#about-stats ul.social li.tweets {
-  width: 100px;
-}
-
-#about-stats ul.social li.blog {
-  width: 154px;
-}
-
-#about-stats ul.social li.lunch {
-  width: 135px;
-}
-
-#about-stats ul.social li.lunch h3 a {
-  float: right;
-}
-
-#about-stats ul.social li.ideas {
-  width: 140px;
-}
-
-#about-stats ul.social li:first-child {
-  background: none;
-}
-
-#about-stats ul.social li h3 {
-  font: bold 12px 'Droid Sans', sans-serif;
-  text-transform: uppercase;
-  margin-bottom: 13px;
-}
-
-#about-stats ul.social li h2 {
-  font: bold 30px 'Droid Sans', sans-serif;
 }
 
 section#team {
@@ -679,134 +637,85 @@ section#team {
   position: relative;
   top: 100px;
   overflow: hidden;
-}
 
-section#team ul {
-  list-style: none;
+  ul {
+    list-style: none;
+  }
 }
 
 @media screen and (max-width: 500px) {
-  #team ul li {
-    width: 100%;
-  /* margin-left:auto !important;
-  margin-right:auto !important; */
-    text-align: center;
-    margin: 0px !important;
-  }
+  #team {
+    ul li {
+      width: 100%;
+      text-align: center;
+      margin: 0px !important;
+      height: 271px;
 
-  #team ul li a {
-    margin: auto !important;
-    display: inline-block !important;
-  }
-
-  #team ul li {
-    height: 271px;
-  }
-}
-
-section#team ul li {
-  float: left;
-  margin-left: 30px;
-  margin-right: 30px;
-  margin-bottom: 60px;
-}
-
-section#team ul li.right {
-  margin-right: 0px;
-}
-
-section#team ul li.last {
-  margin-right: 0px;
-}
-
-#team ul li a {
-  width: 189px;
-  height: 189px;
-  font: bold 14px 'PT Sans', sans-serif;
-  text-align: center;
-  color: #FFF;
-  position: relative;
-  .portrait {
-    position: absolute;
-  /*left: 0px;
-      top: 0px;*/
-    width: 180px;
-    height: 180px;
-    border-radius: 90px;
-    border: solid 6px #ffffff;
-
-    -webkit-transition: all 0.3s ease-out; /* Safari 3.2+, Chrome */
-    -moz-transition: all 0.3s ease-out; /* Firefox 4-15 */
-    -o-transition: all 0.3s ease-out; /* Opera 10.5–12.00 */
-    transition: all 0.3s ease-out; /* Firefox 16+, Opera 12.50+ */
-
-  }
-  &:hover {
-    p {
-      color: #1588c3;
-    }
-    .portrait {
-      border: solid 6px #1588c3;
+      a {
+        margin: auto !important;
+        display: inline-block !important;
+      }
     }
   }
-  p {
-    text-decoration: none;
-    text-transform: uppercase;
-    font: bold 14px 'PT Sans', sans-serif;
-    text-align: center;
-    color: #FFF;
-    -webkit-transition: all 0.3s ease-out; /* Safari 3.2+, Chrome */
-    -moz-transition: all 0.3s ease-out; /* Firefox 4-15 */
-    -o-transition: all 0.3s ease-out; /* Opera 10.5–12.00 */
-    transition: all 0.3s ease-out; /* Firefox 16+, Opera 12.50+ */
-  }
-
 }
 
-/*
-section#team ul li a{
-    display: block;
-    padding-top: 209px;
-    text-align: center;
+section#team ul {
+  li {
+    float: left;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 60px;
+  }
+
+  li.right {
+    margin-right: 0px;
+  }
+
+  li.last {
+    margin-right: 0px;
+  }
+
+  li a {
     width: 189px;
+    height: 189px;
     font: bold 14px 'PT Sans', sans-serif;
+    text-align: center;
     color: #FFF;
-    text-decoration: none;
-    text-transform: uppercase;
-  .new{
-    margin-top: -207px;
-  }
-    .portrait{
-      position: relative;
-      margin-top: -400px;
-      left: -2px;
-      top: 190px;
+    position: relative;
+    .portrait {
+      position: absolute;
       width: 180px;
       height: 180px;
       border-radius: 90px;
-      border:solid 6px #ffffff;
+      border: solid 6px #ffffff;
+
+      -webkit-transition: all 0.3s ease-out; /* Safari 3.2+, Chrome */
+      -moz-transition: all 0.3s ease-out; /* Firefox 4-15 */
+      -o-transition: all 0.3s ease-out; /* Opera 10.5–12.00 */
+      transition: all 0.3s ease-out; /* Firefox 16+, Opera 12.50+ */
+
     }
-}
-
-
-section#team ul li a:hover{
-    color: #1588c3;
-  .new{
-    margin-top: -207px;
+    &:hover {
+      p {
+        color: $blue;
+      }
+      .portrait {
+        border: solid 6px $blue;
+      }
+    }
+    p {
+      text-decoration: none;
+      text-transform: uppercase;
+      font: bold 14px 'PT Sans', sans-serif;
+      text-align: center;
+      color: #FFF;
+      -webkit-transition: all 0.3s ease-out; /* Safari 3.2+, Chrome */
+      -moz-transition: all 0.3s ease-out; /* Firefox 4-15 */
+      -o-transition: all 0.3s ease-out; /* Opera 10.5–12.00 */
+      transition: all 0.3s ease-out; /* Firefox 16+, Opera 12.50+ */
+    }
   }
-    .portrait{
-      position: relative;
-      margin-top: -400px;
-      top: 190px;
-      left: -2px;
-      width: 180px;
-      height: 180px;
-      border-radius: 90px;
-      border:solid 6px #1588c3;
-    }
 }
-
-*/
 
 section#testimonials {
   margin: 120px auto 0px;
@@ -820,22 +729,49 @@ section#testimonials {
     background: image-url("quote.png") 0px 0px no-repeat;
   }
 
-}
+  header {
+    border-top: 2px solid $blue;
+    background: image-url("projects-border.png") 0px bottom repeat-x;
+    height: 78px;
 
-section#testimonials header {
-  border-top: 2px solid #1588c3;
-  background: image-url("projects-border.png") 0px bottom repeat-x;
-  height: 78px;
-}
+    h3 {
+      font: bold 18px 'PT Sans', sans-serif;
+      color: #FFF;
+      padding-left: 50px;
+      background: image-url("quote.png") no-repeat scroll 0 26px transparent;
+      text-transform: uppercase;
+      line-height: 78px;
+      float: left;
+    }
+  }
 
-section#testimonials header h3 {
-  font: bold 18px 'PT Sans', sans-serif;
-  color: #FFF;
-  padding-left: 50px;
-  background: image-url("quote.png") no-repeat scroll 0 26px transparent;
-  text-transform: uppercase;
-  line-height: 78px;
-  float: left;
+  ul {
+    margin-top: 65px;
+    li {
+      p {
+        color: $gray;
+        display: block;
+        font: 18px/36px 'Droid Serif', serif;
+        margin: 0 auto;
+        text-align: center;
+        max-width: 600px;
+      }
+
+      div.author {
+        margin: 0px auto;
+        height: 30px;
+        font: 13px/30px 'PT Sans', sans-serif;
+        color: #FFF;
+        width: 155px;
+        margin-top: 25px;
+        img {
+          display: block;
+          margin-right: 10px;
+          float: left;
+        }
+      }
+    }
+  }
 }
 
 a.test-nav {
@@ -844,6 +780,10 @@ a.test-nav {
   height: 35px;
   float: right;
   margin-top: 24px;
+
+  &:hover {
+    background-position: 0px -35px;
+  }
 }
 
 a.test-nav.prev {
@@ -855,47 +795,12 @@ a.test-nav.next {
   background: image-url("testimonial-next.png") no-repeat;
 }
 
-a.test-nav:hover {
-  background-position: 0px -35px;
-}
-
-section#testimonials ul {
-  margin-top: 65px;
-  li {
-    p {
-      color: #B2B2B2;
-      display: block;
-      font: 18px/36px 'Droid Serif', serif;
-      margin: 0 auto;
-      text-align: center;
-      max-width: 600px;
-    }
-
-    div.author {
-      margin: 0px auto;
-      height: 30px;
-      font: 13px/30px 'PT Sans', sans-serif;
-      color: #FFF;
-      width: 155px;
-      margin-top: 25px;
-      img {
-        display: block;
-        margin-right: 10px;
-        float: left;
-      }
-    }
-  }
-}
-
 #our-clients {
-/*@include w960;*/
 
   header {
     background: image-url("projects-border.png") 0px 100% repeat-x;
     overflow: hidden;
-  }
 
-  header {
     h2 {
       font: bold 18px 'PT Sans', sans-serif;
       color: white;
@@ -910,7 +815,6 @@ section#testimonials ul {
       margin-top: 30px;
     }
   }
-
 }
 
 .portfolio-thumbs {
@@ -931,69 +835,70 @@ section#testimonials ul {
   .featured_projects .fp_img {
     float: none !important;
   }
-
 }
 
-.featured_projects .no1 {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.featured_projects .no2 {
-  float: right;
-}
-
-.featured_projects .fp_img {
-  margin-bottom: 50px;
-  max-width: 280px;
-  max-height: 340px;
-  overflow: hidden;
-  position: relative;
-  border: 5px solid black;
-  .overlay {
-    width: 100%; /*461px; */
-    height: 340px;
-    background: rgba(0, 0, 0, 0.8);
-    -webkit-border-radius: 0px;
-
-    border-radius: 0px;
-    left: 0px;
-    top: 0px;
-    display: none;
-    position: absolute;
+.featured_projects {
+  .no1 {
+    margin-left: auto;
+    margin-right: auto;
   }
-  .link-wrapper {
-    margin: 120px auto 0px;
-    width: 190px;
+
+  .no2 {
+    float: right;
+  }
+
+  .fp_img {
+    margin-bottom: 50px;
+    max-width: 280px;
+    max-height: 340px;
     overflow: hidden;
-  }
-  .separator {
-    height: 58px;
-    border-left: 1px solid #FFF;
-    float: left;
-  }
-  a {
-    &.case {
-      display: block;
-      width: 62px;
-      height: 78px;
-      background: url(case-button.png) 0px 0px no-repeat;
-      float: left;
-      margin-left: 25px;
-      &:hover {
-        background-position: 0px -79px;
-      }
+    position: relative;
+    border: 5px solid black;
+    .overlay {
+      width: 100%; /*461px; */
+      height: 340px;
+      background: rgba(0, 0, 0, 0.8);
+      -webkit-border-radius: 0px;
+
+      border-radius: 0px;
+      left: 0px;
+      top: 0px;
+      display: none;
+      position: absolute;
     }
-    &.view {
-      background: url("view-button.png") no-repeat scroll 0 0 transparent;
-      display: block;
+    .link-wrapper {
+      margin: 120px auto 0px;
+      width: 190px;
+      overflow: hidden;
+    }
+    .separator {
+      height: 58px;
+      border-left: 1px solid #FFF;
       float: left;
-      height: 67px;
-      margin-right: 25px;
-      margin-top: 11px;
-      width: 65px;
-      &:hover {
-        background-position: 0px -68px;
+    }
+    a {
+      &.case {
+        display: block;
+        width: 62px;
+        height: 78px;
+        background: url(case-button.png) 0px 0px no-repeat;
+        float: left;
+        margin-left: 25px;
+        &:hover {
+          background-position: 0px -79px;
+        }
+      }
+      &.view {
+        background: url("view-button.png") no-repeat scroll 0 0 transparent;
+        display: block;
+        float: left;
+        height: 67px;
+        margin-right: 25px;
+        margin-top: 11px;
+        width: 65px;
+        &:hover {
+          background-position: 0px -68px;
+        }
       }
     }
   }
