--- a/app/assets/stylesheets/clients.css.scss
+++ b/app/assets/stylesheets/clients.css.scss
@@ -1,22 +1,17 @@
-// Place all the styles related to the Clients controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
 .client-list {
-padding-top:30px;
-margin:auto;
-}
+  padding-top: 30px;
+  margin: auto;
 
-.client-list div {
+  div {
+    width: 164px;
+    height: 150px;
+    float: left;
+    margin-left: 1px;
+    margin-bottom: 1px;
+    cursor: pointer;
+  }
 
-width:164px;
-height:150px;
-float:left;
-margin-left:1px;
-margin-bottom:1px;
-cursor:pointer;
-}
-
-.client-list div:last-child:after {
-clear:both;
+  div:last-child:after {
+    clear: both;
+  }
 }
