--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -1,3 +1,5 @@
+@import "common";
+
 @media only screen and (max-width: 960px) {
   footer {
     padding-left: 15px;
@@ -15,8 +17,8 @@ footer .the-button {
 footer .star-header {
   margin-top: 0px;
   margin-bottom: 14px;
-  border-top: 2px solid #1588C3;
-  border-bottom: 1px solid #004264;
+  border-top: 2px solid $blue;
+  border-bottom: 1px solid $dark-blue;
   font: bold 18px 'PT Sans', sans-serif;
   color: white;
   background: url(twitter_footer.png) no-repeat 0px 3px;
@@ -26,7 +28,6 @@ footer .star-header {
     padding-left: 50px;
     margin-bottom: 0px;
   }
-
 }
 
 @media only screen and (max-width: 500px) {
@@ -35,9 +36,7 @@ footer .star-header {
     p {
       padding-left: 0px;
     }
-
   }
-
 }
 
 #latest-blogs h2 a {
