--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -1,3 +1,5 @@
+@import "common";
+
 .jobs {
   display: block;
   overflow: hidden;
@@ -15,7 +17,7 @@
   top: -5px;
   background: url(jobs_btn.png);
 
-  color: #004264;
+  color: $dark-blue;
   cursor: auto;
   display: inline-block;
   font-family: 'PT Sans', sans-serif;
